--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <!-- === Login Overlay === -->
+<div class="overlay">
+  <div class="overlay-card">
+    <h1>Enter PIN</h1>
+    <input type="password" id="pin" placeholder="Enter PIN code">
+    <button onclick="checkPin()">Enter</button>
+    <p class="msg"></p>
+  </div>
+</div>
   <div id="pinOverlay" class="overlay">
     <div class="overlay-card">
       <h1>AI Bayan — DARYN (Grade 6)</h1>
