--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <button onclick="goHome()">Menu</button>
 </nav>
 
-  <main>
+<main>
   <!-- === Главная страница === -->
   <section id="home">
     <div class="card">
@@ -43,7 +43,12 @@
 
   <!-- === Раздел Reading === -->
   <section id="reading" class="hidden">
-    <iframe src="data/reading_all.html" width="100%" height="800
+    <iframe src="data/reading_all.html" width="100%" height="800" style="border:none; border-radius:12px;"></iframe>
+  </section>
+
+  <!-- === Раздел Listening === -->
+  <section id="listening" class="hidden">
+    <iframe src="data/listening_all.html" width="100%" height="800" style="border:none
 
   <aside class="sidebar">
     <h3>AI Bayan Chat</h3>
