--- a/index.html
+++ b/index.html
@@ -48,7 +48,17 @@
 
   <!-- === Раздел Listening === -->
   <section id="listening" class="hidden">
-    <iframe src="data/listening_all.html" width="100%" height="800" style="border:none
+    <iframe src="data/listening_all.html" width="100%" height="800" style="border:none; border-radius:12px;"></iframe>
+  </section>
+
+  <!-- === Раздел Use of English === -->
+  <section id="use" class="hidden">
+    <iframe src="data/use_of_english.html" width="100%" height="800" style="border:none; border-radius:12px;"></iframe>
+  </section>
+
+  <!-- === Раздел Writing === -->
+  <section id="writing" class="hidden">
+    <iframe src="data/writing_tasks.html" width
 
   <aside class="sidebar">
     <h3>AI Bayan Chat</h3>
