--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -7,14 +7,15 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
   <!-- === PIN Login (no hints, clean) === -->
-<div class="overlay">
-  <div class="overlay-card">
-    <h1>Enter PIN</h1>
-    <input type="password" id="pin" maxlength="4" autocomplete="off">
-    <button onclick="checkPin()">Enter</button>
+  <div class="overlay">
+    <div class="overlay-card">
+      <h1>Enter PIN</h1>
+      <input type="password" id="pin" maxlength="4" autocomplete="off">
+      <button onclick="checkPin()">Enter</button>
+    </div>
   </div>
-</div>
 
   <header>
     <h1>AI Bayan — DARYN Grade 6</h1>
@@ -24,58 +25,64 @@
     </div>
   </header>
 
- <nav class="menu">
-  <button onclick="goSection('reading')">Reading</button>
-  <button onclick="goSection('listening')">Listening</button>
-  <button onclick="goSection('use')">Use of English</button>
-  <button onclick="goSection('writing')">Writing</button>
-  <button onclick="goHome()">Menu</button>
-</nav>
+  <!-- === Navigation Menu === -->
+  <nav class="menu">
+    <button onclick="goSection('reading')">Reading</button>
+    <button onclick="goSection('listening')">Listening</button>
+    <button onclick="goSection('use')">Use of English</button>
+    <button onclick="goSection('writing')">Writing</button>
+    <button onclick="goHome()">Menu</button>
+  </nav>
 
-<main>
-  <!-- === Главная страница === -->
-  <section id="home">
-    <div class="card">
-      <h2>Welcome!</h2>
-      <p>Choose a section to start practicing Grade 6 DARYN Olympiad tasks (2022–2025).</p>
-    </div>
-  </section>
+  <!-- === Main Content === -->
+  <main>
+    <!-- === Главная страница === -->
+    <section id="home">
+      <div class="card">
+        <h2>Welcome!</h2>
+        <p>Choose a section to start practicing Grade 6 DARYN Olympiad tasks (2022–2025).</p>
+      </div>
+    </section>
 
-  <!-- === Раздел Reading === -->
-  <section id="reading" class="hidden">
-    <iframe src="data/reading_all.html" width="100%" height="800" style="border:none; border-radius:12px;"></iframe>
-  </section>
+    <!-- === Раздел Reading === -->
+    <section id="reading" class="hidden">
+      <iframe src="data/reading_all.html" width="100%" height="800" style="border:none; border-radius:12px;"></iframe>
+    </section>
 
-  <!-- === Раздел Listening === -->
-  <section id="listening" class="hidden">
-    <iframe src="data/listening_all.html" width="100%" height="800" style="border:none; border-radius:12px;"></iframe>
-  </section>
+    <!-- === Раздел Listening === -->
+    <section id="listening" class="hidden">
+      <iframe src="data/listening_all.html" width="100%" height="800" style="border:none; border-radius:12px;"></iframe>
+    </section>
 
-  <!-- === Раздел Use of English === -->
-  <section id="use" class="hidden">
-    <iframe src="data/use_of_english.html" width="100%" height="800" style="border:none; border-radius:12px;"></iframe>
-  </section>
+    <!-- === Раздел Use of English === -->
+    <section id="use" class="hidden">
+      <iframe src="data/use_of_english.html" width="100%" height="800" style="border:none; border-radius:12px;"></iframe>
+    </section>
 
-  <!-- === Раздел Writing === -->
-  <section id="writing" class="hidden">
-    <iframe src="data/writing_tasks.html" width
+    <!-- === Раздел Writing === -->
+    <section id="writing" class="hidden">
+      <iframe src="data/writing_tasks.html" width="100%" height="800" style="border:none; border-radius:12px;"></iframe>
+    </section>
+  </main>
 
+  <!-- === Sidebar (Chat + Journal) === -->
   <aside class="sidebar">
     <h3>AI Bayan Chat</h3>
     <div id="chatBox" class="chat-box"></div>
     <div class="chat-controls">
       <input id="chatInput" type="text" placeholder="Ask AI Bayan...">
-      <button onclick="sendChat()">Send</button>
+      <button onclick="sendMsg()">Send</button>
     </div>
 
-    <div id="teacherJournal" class="journal hidden">
+    <div id="teacherJournal" class="journal">
       <h3>Teacher Journal</h3>
-      <ul id="journalList"></ul>
-      <button onclick="clearJournal()">Clear Journal</button>
+      <ul></ul>
     </div>
   </aside>
 
-  <script src="script.js"></script>
+  <!-- === Floating Chat Button === -->
   <button id="toggleChat">💬</button>
+
+  <script src="script.js"></script>
 </body>
 </html>
