--- a/data/use_of_english.html
+++ b/data/use_of_english.html
@@ -1,84 +1,24 @@
-<h2>🧠 Use of English — Grade 6 (2022–2025)</h2>
-<p><b>Includes District, Regional, and Republican Tours from official DARYN Olympiads.</b></p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Use of English — AI Bayan</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <header>
+    <h1>🧩 Use of English</h1>
+    <a href="index.html" class="back">🏠 Back to Menu</a>
+  </header>
 
-<section class="card">
-<h3>District Tour (Level 1)</h3>
-<p>Choose the correct answer (1 point each).</p>
-
-<form id="quiz_use_district">
-<p>1. My name ______ Aigerim.</p>
-<label><input type="radio" name="q1" value="correct">is</label>
-<label><input type="radio" name="q1">are</label>
-
-<p>2. There ______ three books on the table.</p>
-<label><input type="radio" name="q2" value="correct">are</label>
-<label><input type="radio" name="q2">is</label>
-
-<p>3. The opposite of “cold” is ______.</p>
-<label><input type="radio" name="q3" value="correct">hot</label>
-<label><input type="radio" name="q3">dry</label>
-
-<p>4. I usually ______ my homework in the evening.</p>
-<label><input type="radio" name="q4" value="correct">do</label>
-<label><input type="radio" name="q4">make</label>
-
-<p>5. There ______ some apples in the fridge.</p>
-<label><input type="radio" name="q5" value="correct">are</label>
-<label><input type="radio" name="q5">is</label>
-
-<button type="button" onclick="checkAnswers('Use of English District', 1)">Check</button>
-</form>
-</section>
-
-<section class="card">
-<h3>Regional Tour (Level 2)</h3>
-<p>Choose the correct answer (2 points each).</p>
-
-<form id="quiz_use_regional">
-<p>31. My father ______ to work every day.</p>
-<label><input type="radio" name="q31" value="correct">goes</label>
-<label><input type="radio" name="q31">go</label>
-
-<p>32. There aren’t ______ oranges on the table.</p>
-<label><input type="radio" name="q32" value="correct">any</label>
-<label><input type="radio" name="q32">some</label>
-
-<p>33. She ______ a doctor.</p>
-<label><input type="radio" name="q33" value="correct">is</label>
-<label><input type="radio" name="q33">are</label>
-
-<p>34. My brother is taller ______ me.</p>
-<label><input type="radio" name="q34" value="correct">than</label>
-<label><input type="radio" name="q34">then</label>
-
-<p>35. There are ______ days in a week.</p>
-<label><input type="radio" name="q35" value="correct">seven</label>
-<label><input type="radio" name="q35">five</label>
-
-<button type="button" onclick="checkAnswers('Use of English Regional', 2)">Check</button>
-</form>
-</section>
-
-<section class="card">
-<h3>Republican Tour (Level 3)</h3>
-<p>Each correct answer = 3 points.</p>
-
-<form id="quiz_use_republic">
-<p>61. I ______ to school every day.</p>
-<label><input type="radio" name="q61" value="correct">go</label>
-
-<p>62. The opposite of “young” is ______.</p>
-<label><input type="radio" name="q62" value="correct">old</label>
-
-<p>63. There aren’t ______ apples on the table.</p>
-<label><input type="radio" name="q63" value="correct">any</label>
-
-<p>64. My father ______ a doctor.</p>
-<label><input type="radio" name="q64" value="correct">is</label>
-
-<p>65. “How are you?” – “I’m ______, thank you.”</p>
-<label><input type="radio" name="q65" value="correct">fine</label>
-
-<button type="button" onclick="checkAnswers('Use of English Republican', 3)">Check</button>
-</form>
-</section>
+  <main>
+    <p>Practice grammar, vocabulary and structure tasks here.</p>
+    <ul>
+      <li>🔹 Multiple Choice</li>
+      <li>🔹 Gap Fill</li>
+      <li>🔹 Sentence Transformation</li>
+    </ul>
+  </main>
+</body>
+</html>
