--- a/data/reading_all.html
+++ b/data/reading_all.html
@@ -1,18 +1,24 @@
-<h2>📖 Reading — Grade 6 (2022–2025)</h2>
-<p><b>Read the texts and choose the correct answers.</b></p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Reading — AI Bayan</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <header>
+    <h1>📖 Reading</h1>
+    <a href="index.html" class="back">🏠 Back to Menu</a>
+  </header>
 
-<section class="card">
-<h3>Text 1: My Favourite Day</h3>
-<p>My favourite day is Sunday. I usually get up late, have pancakes for breakfast and watch cartoons. In the afternoon I play football with my friends. I love Sundays because I can relax and have fun.</p>
-<p><b>Question:</b> Why does the author like Sundays?</p>
-<label><input type="radio" name="r1" value="correct">Because he can relax and have fun.</label>
-<label><input type="radio" name="r1">Because he goes to school.</label>
-</section>
-
-<section class="card">
-<h3>Text 2: The Clever Fox</h3>
-<p>One day a hungry fox saw a bunch of grapes hanging high on a vine. He jumped and jumped, but couldn’t reach them. Finally, he walked away saying, “They are probably sour anyway.”</p>
-<p><b>Question:</b> What is the moral of the story?</p>
-<label><input type="radio" name="r2" value="correct">It’s easy to dislike what you can’t have.</label>
-<label><input type="radio" name="r2">Always share with others.</label>
-</section>
+  <main>
+    <p>Read texts and answer comprehension questions.</p>
+    <ul>
+      <li>📘 Stories</li>
+      <li>📗 Articles & Dialogues</li>
+      <li>📙 True/False Tasks</li>
+    </ul>
+  </main>
+</body>
+</html>
