--- a/data/listening_all.html
+++ b/data/listening_all.html
@@ -1,19 +1,24 @@
-<h2>🎧 Listening — Grade 6 (2022–2025)</h2>
-<p><b>Listen to or read the dialogue and choose the correct answers.</b></p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Listening — AI Bayan</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <header>
+    <h1>🎧 Listening</h1>
+    <a href="index.html" class="back">🏠 Back to Menu</a>
+  </header>
 
-<section class="card">
-<h3>Task A</h3>
-<p>Anna: Hi Tom! How was your weekend?<br>Tom: It was great! I went to the mountains with my parents.<br>Anna: Really? Did you go hiking?<br>Tom: Yes, and we saw a beautiful waterfall!</p>
-
-<p><b>Question:</b> Where did Tom go last weekend?</p>
-<label><input type="radio" name="l1" value="correct">To the mountains</label>
-<label><input type="radio" name="l1">To the sea</label>
-</section>
-
-<section class="card">
-<h3>Task B</h3>
-<p>You will hear a boy talking about his school timetable.<br>He says: “On Monday we have English, Maths and Art. My favourite subject is English because we play fun games.”</p>
-<p><b>Question:</b> What is the boy’s favourite subject?</p>
-<label><input type="radio" name="l2" value="correct">English</label>
-<label><input type="radio" name="l2">Maths</label>
-</section>
+  <main>
+    <p>Listen to the tracks and complete tasks.</p>
+    <ul>
+      <li>🎵 Listen & Choose</li>
+      <li>🎧 Fill the Gaps</li>
+      <li>🎤 Identify Speakers</li>
+    </ul>
+  </main>
+</body>
+</html>
