--- a/data/writing_tasks.html
+++ b/data/writing_tasks.html
@@ -1,35 +1,24 @@
-<h2>✍️ Writing — Grade 6 (2022–2025)</h2>
-<p><b>Choose one of the topics below and write your short text (50–80 words).</b></p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Writing — AI Bayan</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <header>
+    <h1>✍️ Writing</h1>
+    <a href="index.html" class="back">🏠 Back to Menu</a>
+  </header>
 
-<section class="card">
-<h3>Task 1 — My Best Friend</h3>
-<p>Write about your best friend. Include:</p>
-<ul>
-<li>His or her name and age</li>
-<li>What he/she likes doing</li>
-<li>Why you like this person</li>
-</ul>
-<textarea rows="6" placeholder="Type your answer here..."></textarea>
-</section>
-
-<section class="card">
-<h3>Task 2 — My Summer Holidays</h3>
-<p>Write about your last summer holidays.</p>
-<ul>
-<li>Where did you go?</li>
-<li>What did you do?</li>
-<li>Did you like it? Why?</li>
-</ul>
-<textarea rows="6" placeholder="Type your answer here..."></textarea>
-</section>
-
-<section class="card">
-<h3>Task 3 — My Dream School</h3>
-<p>Imagine your dream school. Describe:</p>
-<ul>
-<li>Subjects and teachers</li>
-<li>Facilities</li>
-<li>Activities</li>
-</ul>
-<textarea rows="6" placeholder="Type your answer here..."></textarea>
-</section>
+  <main>
+    <p>Develop your writing skills with structured tasks.</p>
+    <ul>
+      <li>📝 Email Writing</li>
+      <li>📄 Story Writing</li>
+      <li>📬 Review / Article</li>
+    </ul>
+  </main>
+</body>
+</html>
